<resources>
    <string name="app_name">OhMyTennis PRO</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="login_title">CONNEXION</string>
    <string name="user_id_hint">E-mail</string>
    <string name="user_id_hint_1">Entrez votre email</string>
    <string name="password_hint">Mot de passe</string>
    <string name="password_hint_1">Entrez votre mot de passe</string>
    <string name="login_button_text">Me Connecter</string>
    <string name="l_forgot_password">Mot de passe oublié ?</string>
    <string name="skip">Skip</string>
    <string name="done">Vous n\'avez pas de compte?</string>
    <string name="register">\tS\'inscrire</string>
    <string name="user_error">Indiquez votre e-mail.</string>
    <string name="pass_error">Indiquez votre mot de passe.</string>
    <string name="forgot_button_text">Envoyer</string>
    <string name="returnback">Retour\t</string>
    <string name="register_tittle">CREER MON COMPTE \- COACH</string>
    <string name="civility">Civilité</string>
    <string name="mrs">Madame</string>
    <string name="mr">Monsieur</string>
    <string name="user_name">Prénom</string>
    <string name="user_name_1">Entrez votre prénom</string>
    <string name="user_name_nd">Nom</string>
    <string name="star">&#160;*</string>
    <string name="user_name_nd_1">Entrez votre nom</string>
    <string name="email_id_hint">E-mail</string>
    <string name="email_id_hint_1">Entrez votre email</string>
    <string name="r_password_hint">Mot de passe</string>
    <string name="r_post_code_hint">Code postal</string>
    <string name="r_post_code_hint_1">Entrez votre code postat</string>
    <string name="r_ville_hint">Ville</string>
    <string name="r_ville_hint_1">Entrez votre ville</string>
    <string name="mobile_hint">Téléphone mobile</string>
    <string name="mobile_hint_1">Entrez votre téléphone</string>
    <string name="r_c_password_hint">Confirmez le mot de passe</string>
    <string name="spinner_hint">Débutants</string>
    <string name="civi_error">Sélectionnez votre civilité.</string>
    <string name="user_name_error">Indiquez votre prénom.</string>
    <string name="user_name_nd_error">Indiquez votre nom.</string>
    <string name="email_id_error">Indiquez votre e-mail</string>
    <string name="r_password_error">Les mots de passe doivent au moins avoir 8 caractères avec les caractères, chiffres et symboles.</string>
    <string name="r_c_password_error">Les mots de passe doivent au moins avoir 8 caractères avec les caractères, chiffres et symboles.</string>
    <string name="r_code_portal_errror">Indiquez votre code postal.</string>
    <string name="spinner_error">Sélectionnez votre ville.</string>
    <string name="r_mobile_error">Indiquez votre numéro de téléphone.</string>
    <string name="check_boc_hint">Sparing</string>
    <string name="register_button_text">S\'inscrire</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="form_one_tab">INFORMATIONS\nPERSONNELLES</string>
    <string name="form_two_tab">ENSEMBLE DE\nCOMPETENCES</string>
    <string name="form_three_tab">DETAILS DE LA\nTRANSACTION</string>
    <string name="one_number_of_individual_courses_booked">Nombre de cours individuels réservés</string>
    <string name="two_number_of_reserved_group_classes">Nombre de cours collectifs réservés</string>
    <string name="three_number_of_reserved_group_courses_reserved">Nombre de cours collectifs ondemand réservés</string>
    <string name="four_number_of_individual_courses_completed">Nombre de cours individuels terminés</string>
    <string name="five_number_of_group_classes_completed">Nombre de cours collectifs terminés</string>
    <string name="six_number_of_collective_courses_completed">Nombre de cours collectifs ondemand terminés</string>
    <string name="seven_notes_comments">Notes \/ commentaires</string>
    <string name="eight_reschedule_individual_courses">Reschedule \- cours individuels</string>
    <string name="button_modifier">Modifier</string>
    <string name="save_and_continue">Sauvegarder et continuer</string>
    <string name="first_name">Prénom</string>
    <string name="second_name">Nom</string>
    <string name="mail">E-mail</string>
    <string name="telephone">Téléphone</string>
    <string name="description">Description</string>
    <string name="cv">CV</string>
    <string name="cv_hint_one">CV Ajouter</string>
    <string name="cv_hint_two">CV Télécharger</string>
    <string name="service_provision_hint">Prestation de service</string>
    <string name="ray_hint">Rayon</string>
    <string name="price">Prix</string>
    <string name="price_hint_one">Prix pour heure</string>
    <string name="price_hint_two">Prix ​​pour 10 heures</string>
    <string name="transport_hint">Mode de transport</string>
    <string name="partner">Partenaire</string>
    <string name="sparring">Sparring</string>
    <string name="payment">Paiement</string>
    <string name="check">Cheque</string>
    <string name="online_transfer">Virement enligne</string>
    <string name="bank_transfer">Virement banque</string>
    <string name="bank_details">Coordonnées bancaires</string>
    <string name="name_of_the_bank">Nom de la banque</string>
    <string name="account_number">Numéro de compte</string>
    <string name="bank_code">Code banque</string>
    <string name="city_of_the_bank">Ville de la banque </string>
    <string name="submit">Soumettre</string>
    <string name="calendar">Calendrier</string>
    <string name="button_availability">Gerer</string>
    <string name="technical_provided">Technique fournie</string>
    <string name="video">Vidéo</string>
    <string name="save">Enregistrer</string>
    <string name="cancel">Annuler</string>
    <string name="embedurl">Embed URL</string>
    <string name="embedurl_embedded">Embed URL incorporée</string>
    <string name="availability">Disponibilité</string>
    <string name="select_the_genre">Sélectionner le genre</string>
    <string name="daily">Quotidien</string>
    <string name="weekly">Hebdomadaire</string>
    <string name="select_the_week">Sélectionnez le\nsemaine</string>
    <string name="morning">Matin</string>
    <string name="afternoon">Après midi</string>
    <string name="evening">Soirée</string>
    <string name="all">Toute</string>
    <string name="day">Jour</string>
    <string name="nine_to_twel">9h à 12h</string>
    <string name="one_to_five">13h à 17h</string>
    <string name="five_to_nine">17h à 21h</string>
    <string name="monday">Lundi</string>
    <string name="tuesday">Mardi</string>
    <string name="wednesday">Mercredi</string>
    <string name="thursday">Jeudi</string>
    <string name="friday">Vendredi</string>
    <string name="saturday">Samedi</string>
    <string name="sunday">Dimanche</string>
    <string name="okey">Oui</string>
    <string name="CCANCEL">Annuler</string>
    <string name="services_1">Cours individuel</string>
    <string name="services_2">Cours collectif ondemand</string>
    <string name="services_3">Cours collectif club</string>
    <string name="services_4">Stage</string>
    <string name="services_5">Team building</string>
    <string name="services_6">Animations</string>
    <string name="services_7">Tournoi</string>
    <string name="payment_1">Cheque</string>
    <string name="payment_2">Virement enligne</string>
    <string name="payment_3">Virement banque</string>
    <string name="transport_1">Voiture</string>
    <string name="transport_2">Train</string>
    <string name="transport_3">Vélo</string>
    <string name="transport_4">Bus</string>
    <string name="collective_course_title">Cours collectif</string>
    <string name="number_of_persons">Nombre de personnes</string>
    <string name="minimum">Minimum</string>
    <string name="maximum">Maximum</string>
    <string name="make_availability">Faire la disponibilité</string>
    <string name="location">Emplacement</string>
    <string name="price_for_2_persons">Prix pour 2 personnes</string>
    <string name="price_for_3_persons">Prix pour 3 personnes</string>
    <string name="price_for_4_persons">Prix pour 4 personnes</string>
    <string name="price_for_6_persons">Prix pour 6 personnes</string>
    <string name="for_hour">pour heure</string>
    <string name="for_10_hour">pour 10 heure</string>
    <string name="select_the_plan">Sélectionnez le plan</string>
    <string name="commission">Commission</string>
    <string name="subscription">Abonnement</string>
    <string name="collective_course_club_title">Cours collectif club</string>
    <string name="upload">UPLOAD</string>
    <string name="send_photo">Envoyer la photo</string>
    <string name="photo">Photo</string>
    <string name="team_building_tittle">Teambuilding</string>
    <string name="date">Date</string>
    <string name="time">Temps</string>
    <string name="to">To</string>
    <string name="price_for_1_persons">Prix pour 2 personnes</string>
    <string name="price_for_5_persons">Prix pour 5 personnes</string>
    <string name="price_for_10_persons">Prix pour 10 personnes</string>
    <string name="price_for_15_persons">Prix pour 15 personnes</string>
    <string name="price_for_20_persons">Prix pour 20 personnes</string>
    <string name="price_for_25_persons">Prix pour 25 personnes</string>
    <string name="radar">Radar</string>
    <string name="digital_wall">Digital wall</string>
    <string name="inflatable_tennis_court">Inflatable tennis court</string>
    <string name="anni_tennis">Anni \- tennis</string>
    <string name="tournoi_title">Tournoi</string>
    <string name="animation_title">Animation</string>
    <string name="number_of_days">Nombre de jours</string>
    <string name="header">User</string>
    <string name="clear"></string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="discard">Discard</string>
    <string name="search">Search</string>
    <string name="update">Update</string>
    <string name="drawer_open">Open drawer navigation</string>
    <string name="drawer_close">Navigation drawer Close</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="time_format">hh:mm</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="close">Close</string>
    <string name="example_3_input_dialog_title">Enter event title</string>
    <string name="example_3_empty_input_text">Text is empty</string>
    <string name="example_3_dialog_delete_confirmation">Delete this event?</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="week_mode">Week mode</string>
</resources>