<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/ic_notification"
        android:title="@string/add"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_edit"
        android:icon="@drawable/edit_vector"
        android:title="@string/add"
        app:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"/>
    
    <item
        android:id="@+id/menu_update"
        android:icon="@drawable/ic_action_update"
        android:title="@string/update"
        app:showAsAction="never"/>
</menu>