<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_margin="@dimen/login_logo_left_right"
    android:layout_height="wrap_content">
    <Toolbar
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:textSize="20dp"
            android:textColor="@color/whitecolor"
            android:text="@string/service_provision_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </Toolbar>

    <LinearLayout
        android:layout_margin="@dimen/login_logo_left_right"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/paymentcheck_1"

            android:buttonTint="@color/colorPrimary"
            android:text="@string/payment_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <CheckBox
            android:id="@+id/paymentcheck_2"

            android:buttonTint="@color/colorPrimary"
            android:text="@string/payment_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <CheckBox
            android:id="@+id/paymentcheck_3"

            android:buttonTint="@color/colorPrimary"
            android:text="@string/payment_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="@dimen/login_logo_left_right"
        android:layout_marginRight="@dimen/login_logo_left_right"
        android:layout_marginBottom="@dimen/login_logo_left_right"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/payment_cancel"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:layout_height="40dp"
            android:textStyle="bold"
            android:textColor="@color/whitecolor"
            android:text="@string/cancel"

            android:background="@drawable/cancelbutton"
            />
        <Button
            android:id="@+id/payment_Ok"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:layout_height="40dp"
            android:textStyle="bold"
            android:textColor="@color/whitecolor"
            android:text="@string/save"

            android:background="@drawable/loginbutton"
            />

    </LinearLayout>
</LinearLayout>